# VedicAstro

./: .gitignore  ADMIN_STRUCTURED.md  AGENTS.md  CONTEXT.md  EMBEDDINGS_RUN_PREP.md  IMPACT_AND_VERIF.md  LEARN_FULL_CHAPTERS_STATUS.md  LEARN_ROLLOUT.md  LOCAL_DEV.md  MASTER_TODO.md  README.md  ROLLOUT_NOTE.md  STATUS.md  VERIFICATION_REPORT.md  dev.sh  knowledge-graph-visualizer-standalone.html  knowledge-graph-visualizer.html  pyproject.toml  tmp_probe_supabase_patches.py
cvce/: .env.example  .gitignore  Dockerfile  README.md  fly.toml  patch_pyjhora.py  requirements-dev.txt  requirements-prod.txt  requirements.txt  start.sh  validate.py
docs/: GAP_ANALYSIS.md  KE_FULL_UPDATE_WAVE_2026-06-30.md  MULTI_AGENT_MANDATORY_RULE.md  VERIFICATION_REPORT.md  chart_data.schema.json  embeddings-activation-report-2026-06-30.md  knowledge-engine-architecture.md  knowledge-engine-mapping-audit.md  knowledge-engine-plan.md  knowledge-engine-status.md  knowledge-graph-flow.md  learn_full_chapters_status.json  multi-agent-launch-templates.md  multi-agent-wave-gyan-structured-2026-06-30.md  structured-gyan-library-audit-2026-06-30.md  verification_results.json
knowledge-graph/: IMPROVEMENTS.md  JATAKA_PARIJATA_FIX.md  KNOWLEDGE_CATALOG.md  README.md  core-jyotisha-ingest.json  corpus-manifest.json  graph-version.json  merge_chunk03.py  orphan-proposals-test.json  orphan-proposals.json
launchd/: README.md  com.vedicastro.ingest-status.plist  com.vedicastro.ingest.plist
portal/: DESIGN.md  README.md  next.config.ts  package-lock.json  package.json  supabase-corpus-schema.sql  supabase-schema.sql
scripts/: apply-supabase-corpus-schema.sh  apply_node_chapter_patch.py  build-graph-grok.py  build_structured_library.py  commit_agent.py  commit_agent_config.json  core_jyotisha_titles.py  extract_pdfs.py  (+52 more)
(+451 files in other folders)
