[project]
name = "vedicastro"
version = "0.1.0"
description = "Vedic Astrology platform with Knowledge Graph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyswisseph>=2.10.03",
    "PyJHora>=4.8.7",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "numpy>=2.0",
    "pandas>=2.0",
    "pytz",
    "geocoder",
    "geopy>=2.4.0",
    "timezonefinder>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "jsonschema>=4.20",
    "ruff>=0.4.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = ["E501"]  # line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["cvce", "vedic_engine", "knowledge_engine"]